Only populate classpaths etc. if they exist in the compiler